--- a/package.json
+++ b/package.json
@@ -21,17 +21,23 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
     "@chakra-ui/react": "^2.8.1",
+    "@chakra-ui/theme-tools": "^2.1.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/plus-jakarta-sans": "^5.0.17",
     "framer-motion": "^10.16.4",
     "million": "2.6.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.6",
+    "react-dark-mode-toggle-2": "^2.0.8",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "react-social-icons": "^6.6.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.2.0",
