--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/plus-jakarta-sans": "^5.0.17",
+    "chakra-any-carousel": "^1.0.2",
     "framer-motion": "^10.16.4",
     "million": "2.6.4",
     "react": "^18.2.0",
