--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/plus-jakarta-sans": "^5.0.17",
+    "@types/lodash": "^4.14.201",
     "chakra-any-carousel": "^1.0.5",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "million": "2.6.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.6",
