--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/lodash": "^4.14.201",
     "chakra-any-carousel": "^1.0.5",
     "framer-motion": "^10.16.4",
+    "history": "^5.3.0",
     "lodash": "^4.17.21",
     "million": "2.6.4",
     "react": "^18.2.0",
