--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "million": "2.6.4",
+    "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.6",
     "react-dom": "^18.2.0",
