--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "standard-version": "^9.5.0",
+    "turbo": "^2.2.3",
     "typescript": "5.2.2",
     "vite": "^4.5.0",
     "vite-plugin-checker": "^0.6.2",
